--- a/PearlHacksStopwatch/Base.lproj/Main.storyboard
+++ b/PearlHacksStopwatch/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PearlHacksStopwatch" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PearlHacks2016Stopwatch" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -30,13 +30,21 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="X4p-zD-0IS">
+                                <rect key="frame" x="144" y="276" width="313" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="309" id="6uz-Y0-K12"/>
+                                </constraints>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ZrN-vO-AL7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="15F-3i-iNg"/>
+                            <constraint firstItem="X4p-zD-0IS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8jD-kR-mft"/>
                             <constraint firstItem="96W-mz-FAb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BcF-Ra-Sct"/>
+                            <constraint firstItem="ZrN-vO-AL7" firstAttribute="top" secondItem="X4p-zD-0IS" secondAttribute="bottom" constant="60" id="Gq3-s7-5CO"/>
+                            <constraint firstItem="X4p-zD-0IS" firstAttribute="top" secondItem="96W-mz-FAb" secondAttribute="bottom" constant="60" id="jQ4-Wr-xOM"/>
                             <constraint firstItem="96W-mz-FAb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="175" id="jiW-Zf-mmH"/>
-                            <constraint firstItem="ZrN-vO-AL7" firstAttribute="top" secondItem="96W-mz-FAb" secondAttribute="bottom" constant="150" id="tct-3I-XhM"/>
                         </constraints>
                     </view>
                     <connections>
@@ -46,6 +54,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="378" y="339"/>
         </scene>
     </scenes>
 </document>
