--- a/PearlHacksStopwatch/Base.lproj/Main.storyboard
+++ b/PearlHacksStopwatch/Base.lproj/Main.storyboard
@@ -48,10 +48,18 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="VkM-bf-EF0">
                                 <rect key="frame" x="290" y="67" width="20" height="20"/>
                             </activityIndicatorView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ICv-UH-q4N">
+                                <rect key="frame" x="153" y="159" width="294" height="2"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="294" id="ot8-fb-IIG"/>
+                                </constraints>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ZrN-vO-AL7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="15F-3i-iNg"/>
+                            <constraint firstItem="ICv-UH-q4N" firstAttribute="top" secondItem="VkM-bf-EF0" secondAttribute="bottom" constant="72" id="79N-Ge-T7e"/>
+                            <constraint firstItem="ICv-UH-q4N" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7LT-2g-0DY"/>
                             <constraint firstItem="X4p-zD-0IS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8jD-kR-mft"/>
                             <constraint firstItem="96W-mz-FAb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BcF-Ra-Sct"/>
                             <constraint firstItem="VkM-bf-EF0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DLR-wJ-93M"/>
@@ -65,6 +73,7 @@
                     </view>
                     <connections>
                         <outlet property="activityIndicatorView" destination="VkM-bf-EF0" id="5ql-Hr-AY9"/>
+                        <outlet property="progressView" destination="ICv-UH-q4N" id="lmT-Xe-XRy"/>
                         <outlet property="slider" destination="X4p-zD-0IS" id="5yb-u8-Zbw"/>
                         <outlet property="stopwatchButton" destination="ZrN-vO-AL7" id="ElP-cH-9bL"/>
                         <outlet property="switcher" destination="H3h-T3-3ym" id="FfJ-Pz-cCn"/>
